Trimmed some spacing issues

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -64,13 +64,15 @@ body.container {
     text-align: center;
 }
 
-.ride-info-left, .ride-info-right {
+.ride-info-left {
     float: left;
-    width: 46%;
-    padding-left: 1%;
-    padding-right: 1%;
-    margin-left: 1%;
-    margin-right: 1%;
+    width: 250px;
+    margin: 2.5px;
+}
+
+.ride-info-right {
+    float: left;
+    margin: 2.5px;
 }
 
 .flex-container {
